Created class 4 file

--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "3print(8*7+3/2-4)\n",
+    "print(8*7+3/2-4)\n",
     "#works according to PEMDAS rule (paranthesis, exponent, multiply, divide, add, subtract)\n",
     "#operation: 2+3 \n",
     "#operand: 2,3\n",
@@ -126,7 +126,7 @@
    ],
    "source": [
     "'''\n",
-    "deep copy: content copy (slow)\n",
+    "deep copy: content copy (slow) copy by value\n",
     "shallow copy: adress copy also called copy by reference (fast)\n",
     "'''"
    ]
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -247,26 +247,26 @@
        "list"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#lists start from index 0\n",
-    "#index  0   1       2     3     4\n",
-    "name = [1, \"ishra\", \"AI\", True, 45] #array size is fix\n",
+    "#index  0     1      2     3     4\n",
+    "name = [1, \"ishra\", \"AI\", True, 45] \n",
     "#index  -5   -4     -3     -2    -1\n",
     "type(name)\n",
     "\n",
-    "#homogenous means all elemnsts datatypes are same e.g array\n",
+    "#homogenous means all elemnsts datatypes are same e.g array, array size is fix\n",
     "#heterogenous means different types can be stored  e.g. list\n",
     "#be a interprator to be a good programmer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "'Abdul Hussain'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,6 +392,7 @@
     "# dictionary, pass it key (stored as string) and value, seperator is comma , and associate it with value we use colon :\n",
     "# any hashable function can be used as key\n",
     "#also eliminate duplicate keys (keys with same name)\n",
+    "#       {   key:  value,                key:value }\n",
     "data = {\"name\": \"Ishra Hussain\", \"father_name\":\"Abdul Hussain\", \"age\":23, \"list\": [2,3,\"45\"]}\n",
     "#to print we pass key\n",
     "data[\"father_name\"]"
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -465,13 +466,13 @@
        "['name', 'father_name', 'age', 'list']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(data) #pass keys to list"
+    "list(data) #pass keys to list when type cast to list"
    ]
   },
   {
