Created new files

--- a/Class7.ipynb
+++ b/Class7.ipynb
@@ -67,7 +67,7 @@
     "Single line function and function without any name, cannot use before defining and can't use it after execution\n",
     "\n",
     "- Positional arguments: \n",
-    "Position has important role in these function, pass arguments with correct position\n",
+    "Position has important role in these function, pass arguments according to their correct position\n",
     "\n",
     "- Keyword Arguments: \n",
     "Value given when calling function is keyword arguments, position doesnt matter e.g sum(x=1, y=3)\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -158,13 +158,13 @@
      "output_type": "stream",
      "text": [
       "Pakistan Livelong\n",
-      "I am Paksitani\n",
+      "I am Pakistani\n",
       "I love Pakistan\n",
       "Pakistan Livelong\n",
-      "I am Paksitani\n",
+      "I am Pakistani\n",
       "I love Pakistan\n",
       "Pakistan Livelong\n",
-      "I am Paksitani\n",
+      "I am Pakistani\n",
       "I love Pakistan\n"
      ]
     }
@@ -174,7 +174,7 @@
     "def prn(): #function declaration\n",
     "    #body of function\n",
     "    print(\"Pakistan Livelong\") \n",
-    "    print(\"I am Paksitani\")\n",
+    "    print(\"I am Pakistani\")\n",
     "    print(\"I love Pakistan\")\n",
     "\n",
     "prn() #calling function\n",
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,6 +310,67 @@
     "        [2, \"Bushra Hashmi\", \"Jamil Hashmi\", \"IOT\", \"12:00pm-3:00pm\"],\\\n",
     "        [3, \"Muhammad Ammad\", \"Muhammad Ramzan\", \"IT\", \"3:00pm-6:00pm\"],\\\n",
     "        [4, \"Sami Ullah\", \"Abdul Hussain\", \"BSEE\", \"9:00am-12:00pm\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    -------------------------------\n",
+      "            PIAIC Islamabad\n",
+      "    -------------------------------\n",
+      "        ID = 1\n",
+      "        Name = Ishra Hussain\n",
+      "        Father Name = Abdul Hussain\n",
+      "        Course = AI\n",
+      "        Timing = 9:00am-12:00pm\n",
+      "    -------------------------------\n",
+      "    \n",
+      "\n",
+      "    -------------------------------\n",
+      "            PIAIC Islamabad\n",
+      "    -------------------------------\n",
+      "        ID = 2\n",
+      "        Name = Bushra Hashmi\n",
+      "        Father Name = Jamil Hashmi\n",
+      "        Course = IOT\n",
+      "        Timing = 12:00pm-3:00pm\n",
+      "    -------------------------------\n",
+      "    \n",
+      "\n",
+      "    -------------------------------\n",
+      "            PIAIC Islamabad\n",
+      "    -------------------------------\n",
+      "        ID = 3\n",
+      "        Name = Muhammad Ammad\n",
+      "        Father Name = Muhammad Ramzan\n",
+      "        Course = IT\n",
+      "        Timing = 3:00pm-6:00pm\n",
+      "    -------------------------------\n",
+      "    \n",
+      "\n",
+      "    -------------------------------\n",
+      "            PIAIC Islamabad\n",
+      "    -------------------------------\n",
+      "        ID = 4\n",
+      "        Name = Sami Ullah\n",
+      "        Father Name = Abdul Hussain\n",
+      "        Course = BSEE\n",
+      "        Timing = 9:00am-12:00pm\n",
+      "    -------------------------------\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "for v in data: # one way of passing values from list\n",
+    "    id_card(v[0],v[1],v[2],v[3],v[4])"
    ]
   },
   {
@@ -546,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -568,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -592,6 +653,40 @@
    "source": [
     "card = id_card(1, \"Ishra Hussain\", \"Abdul Hussain\", \"AI\", \"9:00am-12:00pm\") # retun function assigned to a variable\n",
     "print(*card)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('\\n    -------------------------------\\n            PIAIC Islamabad\\n    -------------------------------\\n        ID = 1\\n        Name = Ishra Hussain\\n        Father Name = Abdul Hussain\\n        Course = AI\\n        Timing = 9:00am-12:00pm\\n    -------------------------------\\n    ', 'ishra', 'hussain')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(card) # returns as a tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hussain\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(card[2])"
    ]
   },
   {
@@ -910,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -964,6 +1059,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "    -------------------------------\n",
+      "            PIAIC Islamabad\n",
+      "    -------------------------------\n",
+      "        ID = 1\n",
+      "        Name = Ishra Hussain\n",
+      "        Father Name = Abdul Hussain\n",
+      "        Course = AI\n",
+      "        Timing = 9:00am-12:00pm\n",
+      "    -------------------------------\n",
+      "    \n",
+      "\n",
+      "    -------------------------------\n",
+      "            PIAIC Islamabad\n",
+      "    -------------------------------\n",
+      "        ID = 2\n",
+      "        Name = Tayyaba Hussain\n",
+      "        Father Name = Abdul Hussain\n",
+      "        Course = AI\n",
+      "        Timing = 9:00am-12:00pm\n",
+      "    -------------------------------\n",
+      "    \n",
+      "\n",
+      "    -------------------------------\n",
+      "            PIAIC Islamabad\n",
+      "    -------------------------------\n",
+      "        ID = 3\n",
+      "        Name = Bushra Hashmi\n",
+      "        Father Name = M Jamil\n",
+      "        Course = IOT\n",
+      "        Timing = 12:00pm-3:00pm\n",
+      "    -------------------------------\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = {\n",
+    "    0 : {\n",
+    "    \"sid\": 1, \n",
+    "    \"fname\": \"Abdul Hussain\",\n",
+    "    \"course\": \"AI\", \n",
+    "    \"sname\": \"Ishra Hussain\",\n",
+    "    \"timing\": \"9:00am-12:00pm\"   \n",
+    "    },\n",
+    "    1 : {\n",
+    "    \"sid\": 2, \n",
+    "    \"fname\": \"Abdul Hussain\",\n",
+    "    \"course\": \"AI\", \n",
+    "    \"sname\": \"Tayyaba Hussain\",\n",
+    "    \"timing\": \"9:00am-12:00pm\"   \n",
+    "    },\n",
+    "    2: {\n",
+    "    \"sid\": 3, \n",
+    "    \"fname\": \"M Jamil\",\n",
+    "    \"course\": \"IOT\", \n",
+    "    \"sname\": \"Bushra Hashmi\",\n",
+    "    \"timing\": \"12:00pm-3:00pm\"   \n",
+    "    }\n",
+    "}\n",
+    "for v in d1.values():\n",
+    "    print(id_card(**v))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -972,18 +1140,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
     }
    ],
    "source": [
@@ -992,7 +1157,8 @@
     "        return 1\n",
     "    return n * fact(n - 1)\n",
     "    \n",
-    "fact(5) #factorial of 5 i.e. 5*4*3*2*1"
+    "a = fact(5) #factorial of 5 i.e. 5*4*3*2*1\n",
+    "print(a)"
    ]
   },
   {
