--- a/Class8.ipynb
+++ b/Class8.ipynb
@@ -83,12 +83,12 @@
     "    - Over-riding: has parents and child class are same e.g. both can speak but frequency is different or language is different from parents, speaking function inherited but another action language is different, so it is over-riding\n",
     "    any class has method/actions more than one\n",
     "- Incapsulation:\n",
-    "    Class attributes are private in incapsulation, can't be called outside object (secured), e.g. to connect to database there is username, password that is unique and private, not everyone can access it directly, some attributes private. So a class created methods that are private, to access/update those there are functions such as getter, setter etc.\n",
+    "    Class attributes are private in incapsulation, can't be called outside object directly (secured), e.g. to connect to database there is username, password that is unique and private, not everyone can access it directly, some attributes private. So a class created methods that are private, to access/update those there are functions such as getter(to access), setter(to update) methods etc.\n",
     "\n",
     "- Abstraction:\n",
-    "    (incomplete) An empty class, its object cannot be defined directly\n",
+    "    (incomplete) An empty class, its object/instance cannot be defined directly but by inheritiance\n",
     "    e.g. living class has human, animals, plants class, \n",
-    "    human class has male and female class so these are abstract class they are not directly first they are liivng class then human and then male or female class, so there is a hierarchy"
+    "    human class has male and female class so these are abstract class they are not directly ( no direct instance/object exists) first they are livng class then human and then male or female class, so there is a hierarchy"
    ]
   },
   {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
     }
    ],
    "source": [
-    "print(s1.sid, s3.sid) # s1.tab gives all its attributes"
+    "print(s1.sid, s3.sid) # s1.tab gives all its attributes and functions "
    ]
   },
   {
@@ -374,7 +374,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class parent():  # accoding to pep8 class name should have first letter capital so use Parent instead of parent\n",
+    "class parent():  # according to pep8 class name should have first letter capital so use Parent instead of parent\n",
     "    def __init__(self):\n",
     "        self.name = \"\"\n",
     "        self.fname = \"\"\n",
