--- a/Class3.ipynb
+++ b/Class3.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "{2}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1009,6 +1009,7 @@
     "a = 100\n",
     "a %= 3 # \n",
     "a %= 2 #\n",
+    "a %= 4\n",
     "print(a)"
    ]
   },
@@ -1502,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1531,7 +1532,7 @@
        "True"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1542,30 +1543,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: ishra\n"
+      "Name: sara\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "name =  input(\"Name: \")\n",
-    "'ishra' in employees"
+    "name in employees"
    ]
   },
   {
