--- a/Class7.ipynb
+++ b/Class7.ipynb
@@ -1300,6 +1300,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "neither\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perform a task using lambda, takes two numbers x and y, print x is x > y and y otherwise\n",
+    "xyz = lambda x, y: x if x > y else y if y > x else print(\"neither\")\n",
+    "xyz(4, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
