--- a/Class8.ipynb
+++ b/Class8.ipynb
@@ -30,7 +30,7 @@
     "Machine understands binary (0, 1) which is a low level language\n",
     "- low level language is difficult for us to interprate e.g. rust\n",
     "- so a interprator made to translate our language (natural) to machine language (middle level) e.g. assembly language, c language, but it is difficult as it has lengthy code\n",
-    "- so a high level language was developed, more easy convinient for user but difficult for machine as processing time increase for compiler e.g c++"
+    "- so a high level language was developed, more easy convinient for user but difficult for machine as processing time increase for compiler e.g c++, python"
    ]
   },
   {
@@ -530,18 +530,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class A():\n",
+    "    \"\"\"Give any number of arguments to this functions, \n",
+    "    it will add\"\"\"\n",
     "    def abc(self, *n):\n",
     "        print(sum(n))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -581,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -643,7 +645,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    " "
+   ]
   }
  ],
  "metadata": {
