--- a/Class11.ipynb
+++ b/Class11.ipynb
@@ -99,16 +99,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Point(x=989, y=287)"
+       "Point(x=869, y=414)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
       "     |      Raises ValueError if the value is not present.\n",
       "\n",
       "FUNCTIONS\n",
-      "    click(x=None, y=None, clicks=1, interval=0.0, button='primary', duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=None, _pause=True)\n",
+      "    click(x=None, y=None, clicks=1, interval=0.0, button='primary', duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=None, _pause=True)\n",
       "        Performs pressing a mouse button down and then immediately releasing it.\n",
       "        \n",
       "        The x and y parameters detail where the mouse event happens. If None, the\n",
@@ -553,7 +553,7 @@
       "        This function is meant to be run from the command line. It will\n",
       "        automatically display the location and RGB of the mouse cursor.\n",
       "    \n",
-      "    doubleClick(x=None, y=None, interval=0.0, button='left', duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=None, _pause=True)\n",
+      "    doubleClick(x=None, y=None, interval=0.0, button='left', duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=None, _pause=True)\n",
       "        Performs a double click.\n",
       "        \n",
       "        This is a wrapper function for click('left', x, y, 2, interval).\n",
@@ -582,7 +582,7 @@
       "          ValueError: If button is not one of 'left', 'middle', 'right', 1, 2, 3, 4,\n",
       "            5, 6, or 7\n",
       "    \n",
-      "    drag = dragRel(xOffset=0, yOffset=0, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, button='primary', pause=None, logScreenshot=None, _pause=True, mouseDownUp=True)\n",
+      "    drag = dragRel(xOffset=0, yOffset=0, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, button='primary', pause=None, logScreenshot=None, _pause=True, mouseDownUp=True)\n",
       "        Performs a mouse drag (mouse movement while a button is held down) to a\n",
       "        point on the screen, relative to its current position.\n",
       "        \n",
@@ -609,7 +609,7 @@
       "        Returns:\n",
       "          None\n",
       "    \n",
-      "    dragRel(xOffset=0, yOffset=0, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, button='primary', pause=None, logScreenshot=None, _pause=True, mouseDownUp=True)\n",
+      "    dragRel(xOffset=0, yOffset=0, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, button='primary', pause=None, logScreenshot=None, _pause=True, mouseDownUp=True)\n",
       "        Performs a mouse drag (mouse movement while a button is held down) to a\n",
       "        point on the screen, relative to its current position.\n",
       "        \n",
@@ -636,7 +636,7 @@
       "        Returns:\n",
       "          None\n",
       "    \n",
-      "    dragTo(x=None, y=None, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, button='primary', pause=None, logScreenshot=None, _pause=True, mouseDownUp=True)\n",
+      "    dragTo(x=None, y=None, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, button='primary', pause=None, logScreenshot=None, _pause=True, mouseDownUp=True)\n",
       "        Performs a mouse drag (mouse movement while a button is held down) to a\n",
       "        point on the screen.\n",
       "        \n",
@@ -752,7 +752,7 @@
       "        Returns:\n",
       "          None\n",
       "    \n",
-      "    leftClick(x=None, y=None, interval=0.0, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=None, _pause=True)\n",
+      "    leftClick(x=None, y=None, interval=0.0, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=None, _pause=True)\n",
       "        Performs a right mouse button click.\n",
       "        \n",
       "        This is a wrapper function for click('right', x, y).\n",
@@ -781,7 +781,7 @@
       "        \n",
       "        Copied from pytweening module.\n",
       "    \n",
-      "    middleClick(x=None, y=None, interval=0.0, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=None, _pause=True)\n",
+      "    middleClick(x=None, y=None, interval=0.0, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=None, _pause=True)\n",
       "        Performs a middle mouse button click.\n",
       "        \n",
       "        This is a wrapper function for click('right', x, y).\n",
@@ -802,7 +802,7 @@
       "        Returns:\n",
       "          None\n",
       "    \n",
-      "    mouseDown(x=None, y=None, button='primary', duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=None, _pause=True)\n",
+      "    mouseDown(x=None, y=None, button='primary', duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=None, _pause=True)\n",
       "        Performs pressing a mouse button down (but not up).\n",
       "        \n",
       "        The x and y parameters detail where the mouse event happens. If None, the\n",
@@ -827,7 +827,7 @@
       "    \n",
       "    mouseInfo()\n",
       "    \n",
-      "    mouseUp(x=None, y=None, button='primary', duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=None, _pause=True)\n",
+      "    mouseUp(x=None, y=None, button='primary', duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=None, _pause=True)\n",
       "        Performs releasing a mouse button up (but not down beforehand).\n",
       "        \n",
       "        The x and y parameters detail where the mouse event happens. If None, the\n",
@@ -850,7 +850,7 @@
       "        Raises:\n",
       "          ValueError: If button is not one of 'left', 'middle', 'right', 1, 2, or 3\n",
       "    \n",
-      "    move = moveRel(xOffset=None, yOffset=None, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=False, _pause=True)\n",
+      "    move = moveRel(xOffset=None, yOffset=None, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=False, _pause=True)\n",
       "        Moves the mouse cursor to a point on the screen, relative to its current\n",
       "        position.\n",
       "        \n",
@@ -874,7 +874,7 @@
       "        Returns:\n",
       "          None\n",
       "    \n",
-      "    moveRel(xOffset=None, yOffset=None, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=False, _pause=True)\n",
+      "    moveRel(xOffset=None, yOffset=None, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=False, _pause=True)\n",
       "        Moves the mouse cursor to a point on the screen, relative to its current\n",
       "        position.\n",
       "        \n",
@@ -898,7 +898,7 @@
       "        Returns:\n",
       "          None\n",
       "    \n",
-      "    moveTo(x=None, y=None, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=False, _pause=True)\n",
+      "    moveTo(x=None, y=None, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=False, _pause=True)\n",
       "        Moves the mouse cursor to a point on the screen.\n",
       "        \n",
       "        The x and y parameters detail where the mouse event happens. If None, the\n",
@@ -968,7 +968,7 @@
       "        Returns:\n",
       "          None\n",
       "    \n",
-      "    rightClick(x=None, y=None, interval=0.0, duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=None, _pause=True)\n",
+      "    rightClick(x=None, y=None, interval=0.0, duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=None, _pause=True)\n",
       "        Performs a right mouse button click.\n",
       "        \n",
       "        This is a wrapper function for click('right', x, y).\n",
@@ -1064,7 +1064,7 @@
       "    \n",
       "    sleep(seconds)\n",
       "    \n",
-      "    tripleClick(x=None, y=None, interval=0.0, button='left', duration=0.0, tween=<function linear at 0x000001CC3F68B9D8>, pause=None, logScreenshot=None, _pause=True)\n",
+      "    tripleClick(x=None, y=None, interval=0.0, button='left', duration=0.0, tween=<function linear at 0x000001A90F1FB730>, pause=None, logScreenshot=None, _pause=True)\n",
       "        Performs a triple click..\n",
       "        \n",
       "        This is a wrapper function for click('left', x, y, 3, interval).\n",
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1392,14 +1392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "pg.moveTo(798,427, 1)\n",
     "pg.click()\n",
-    "pg.write('pyautogui documentation\\n', )\n",
-    "pg.moveTo(989, 287, 2)\n",
+    "pg.write('PUBG\\n', )\n",
+    "pg.moveTo(869, 414, 2)\n",
     "pg.click()"
    ]
   },
@@ -4113,7 +4113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -4129,7 +4129,7 @@
       "\u001b[1;31mFileNotFoundError\u001b[0m: [WinError 2] The system cannot find the file specified",
       "\nDuring handling of the above exception, another exception occurred:\n",
       "\u001b[1;31mWebDriverException\u001b[0m                        Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-88-4727c59c5a77>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mKeys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdriver\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://www.google.com/'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# for websites that require login, only use to control webbrowser\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-2-4727c59c5a77>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mselenium\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcommon\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mKeys\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 5\u001b[1;33m \u001b[0mdriver\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mwebdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mChrome\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      6\u001b[0m \u001b[0mdriver\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://www.google.com/'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# for websites that require login, only use to control webbrowser\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\selenium\\webdriver\\chrome\\webdriver.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, executable_path, port, options, service_args, desired_capabilities, service_log_path, chrome_options, keep_alive)\u001b[0m\n\u001b[0;32m     71\u001b[0m             \u001b[0mservice_args\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mservice_args\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m             log_path=service_log_path)\n\u001b[1;32m---> 73\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mservice\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     74\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     75\u001b[0m         \u001b[1;32mtry\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\selenium\\webdriver\\common\\service.py\u001b[0m in \u001b[0;36mstart\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     81\u001b[0m                 raise WebDriverException(\n\u001b[0;32m     82\u001b[0m                     \"'%s' executable needs to be in PATH. %s\" % (\n\u001b[1;32m---> 83\u001b[1;33m                         os.path.basename(self.path), self.start_error_message)\n\u001b[0m\u001b[0;32m     84\u001b[0m                 )\n\u001b[0;32m     85\u001b[0m             \u001b[1;32melif\u001b[0m \u001b[0merr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0merrno\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0merrno\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mEACCES\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mWebDriverException\u001b[0m: Message: 'chromedriver' executable needs to be in PATH. Please see https://sites.google.com/a/chromium.org/chromedriver/home\n"
