--- a/Class2.ipynb
+++ b/Class2.ipynb
@@ -259,7 +259,7 @@
     "#index  -5   -4     -3     -2    -1\n",
     "type(name)\n",
     "\n",
-    "#homogenous means all elemnsts datatypes are same e.g array, array size is fix\n",
+    "#homogenous means all elements datatypes are same e.g array, array size is fix\n",
     "#heterogenous means different types can be stored  e.g. list\n",
     "#be a interprator to be a good programmer"
    ]
@@ -306,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'SARA', 'BUSHRA', 'ISHRA'}\n"
+      "{'BUSHRA', 'SARA', 'ISHRA'}\n"
      ]
     },
     {
@@ -322,7 +322,7 @@
        "set"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        " 'zfill']"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "26"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +714,7 @@
        "'Pakistan'"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,14 +725,14 @@
     "while slicing\n",
     "start is included\n",
     "end is not included\n",
-    "step: how many steps we ant to move\n",
+    "step: how many steps we want to move\n",
     "\"\"\"\n",
-    "patriotism[23:31:1] #end is not included, [start:end:step], step is 1 by default if not defined"
+    "patriotism[26:34:1] #end is not included, [start:end:step], step is 1 by default if not defined"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +761,7 @@
        "1"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
